src/objects/Site__c.object
<CustomObject>
    <description>Represents a customer/vendor site (address/location).</description>
    <fields>
        <fullName>AccountManager__c</fullName>
        <formula>Account__r.Account_Manager__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Represents the account which is bound to the customer/vendor site (address/location).</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressID__c</fullName>
        <label>Address ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccountSiteID__c</fullName>
        <externalId>true</externalId>
        <label>Customer Account Site ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerSiteUseCode__c</fullName>
        <externalId>true</externalId>
        <label>Customer Site Use Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSiteUseID__c</fullName>
        <label>Customer Site Use ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCustomerID__c</fullName>
        <formula>Account__r.OracleCustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCustomerNumber__c</fullName>
        <formula>Account__r.OracleCustomerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSiteOrigSystemReference__c</fullName>
        <label>Oracle Site Orig System Reference</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <label>Org ID</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization String</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteStatus__c</fullName>
        <label>Site Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province/Emirate</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OracleCustomerID__c</columns>
        <columns>OracleCustomerNumber__c</columns>
        <columns>AccountName__c</columns>
        <columns>OrganizationId__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Site-{0000000000}</displayFormat>
        <label>Site Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>